// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithUnit /> by default matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH eiEJux sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM FfSph"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with disabled prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH eiEJux sc-EHOje kAxTfU"
    disabled={true}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM bNPoUD"
    disabled={true}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with error prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH iGQVAk sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM gBboir"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with unit prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH eiEJux sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  >
    €
  </input>
  <span
    className="sc-bZQynM FfSph"
    disabled={false}
  >
    λ
  </span>
</div>
`;

exports[`<TextInputWithUnit /> with valid prop matches with snapshot 1`] = `
<div
  className="sc-ifAKCX bCBibu"
>
  <input
    className="sc-bwzfXH iSPCiL sc-EHOje kAxTfU"
    disabled={false}
    name="text"
    type="number"
  />
  <span
    className="sc-bZQynM iRdDKu"
    disabled={false}
  >
    λ
  </span>
</div>
`;
